--- a/about.html
+++ b/about.html
@@ -1,8 +1,17 @@
 ---
 layout: default
-title: About
+title: 희망복지재단 소개
 ---
-<div class="container" style="padding: 24px;">
-    <h1 class="display-4">소망의 동산 소개</h1>
-    <hr>
+
+<header class="py-5 bg-image-full text-center" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
+  <div class="wfh-header-bg">
+    <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
+    <hr style="width: 50%; border-color: #cccccc;">
+    <h3>{{ page.title }}</h3>
   </div>
+</header>
+
+<div class="container" style="padding: 24px;">
+  <h1>소개</h1>
+  <hr>
+</div>
