--- a/donations/index.html
+++ b/donations/index.html
@@ -1,15 +1,20 @@
 ---
 layout: default
-title: Main
+title: 후원 내역
 ---
 <style>
 
 </style>
 
-<div class="container" style="padding: 24px;">
-  <h1 class="display-4">후원 내역</h1>
-  <hr>
+<header class="py-5 bg-image-full text-center" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
+  <div class="wfh-header-bg">
+    <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
+    <hr style="width: 50%; border-color: #cccccc;">
+    <h3>{{ page.title }}</h3>
+  </div>
+</header>
 
+<div class="container" style="padding: 24px;">
   <div class="table-responsible">
     <table class="table">
       <thead>
