--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@ layout: default
 title: Main
 ---
 <!-- Header - set the background image for the header in the line below -->
+<!--
 <header class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
   <img class="img-fluid d-block mx-auto" src="http://placehold.it/200x200&text=Logo" alt="">
 </header>
+-->
+<section class="py-5 bg-image-full text-center" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
+  <div class=" wfh-header-bg">
+    <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
+    <hr style="width: 50%; border-color: #cccccc;">
+    <h3><span style="color: rgb(241, 163, 200);">사랑</span>하며 <span style="color: rgb(241, 207, 163);">행복</span>하게 <span style="color: rgb(163, 241, 202);">은혜</span>롭게</h3>
+  </div>
+</section>
 
 <!-- Content section -->
 <section class="py-5">
   <div class="container">
-    <h1>Section Heading</h1>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+    <h1>설립 목적 <small class="d-none d-md-inline" style="color: gray;">Purpose of Estabilishment</small></h1>
+    <hr>
+    <p class="lead">사회복지사업법에 의한 노인요양시설로써 장기적인 요양이 필요한 어르신들에게 체계적이고 전문적인 장기 요양서비스를 제공하고 쾌적한 환경에서 기독교의 사랑을 전하며 보다 편안하고 안정적으로 '어르신들의 삶의 질'을 향상시키고자 함</p>
   </div>
 </section>
 
@@ -25,8 +34,13 @@ title: Main
 <!-- Content section -->
 <section class="py-5">
   <div class="container">
-    <h1>Section Heading</h1>
-    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+    <h1>운영 비전 <small class="d-none d-md-inline" style="color: gray;">Visions</small></h1>
+    <hr>
+    <ul>
+      <li><p class="lead">어르신의 존엄성과 가치를 최대한 존중하는 노인복지 실천의 장</p></li>
+      <li><p class="lead">고령화 사회를 적극적으로 대처하는 전문가 정신 및 역할</p></li>
+      <li><p class="lead">지역사회와 교류를 통한 새로운 노인복지, 문화 복합시설 지향</p></li>
+      <li><p class="lead">건강한 어르신가족, 직원이 만들어가는 행복한 요양시설</p></li>
+    </ul>
   </div>
 </section>
