--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: default
 title: 희망복지재단 소개
 ---
 
-<header class="py-5 bg-image-full text-center" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
+<header class="py-5 bg-image-full text-center" style="background-image: url('img/index-1.webp');">
   <div class="wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
     <hr style="width: 50%; border-color: #cccccc;">
