--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ title: Main
   <img class="img-fluid d-block mx-auto" src="http://placehold.it/200x200&text=Logo" alt="">
 </header>
 -->
-<section class="py-5 bg-image-full text-center" style="background-image: url('https://unsplash.it/1900/1080?image=1076');">
+
+<section class="py-5 bg-image-full text-center" style="background-image: url(img/index-1.webp);">
   <div class=" wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
     <hr style="width: 50%; border-color: #cccccc;">
@@ -26,7 +27,7 @@ title: Main
 </section>
 
 <!-- Image Section - set the background image for the header in the line below -->
-<section class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1081');">
+<section class="py-5 bg-image-full" style="background-image: url(img/index-2.webp);">
   <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
   <div style="height: 200px;"></div>
 </section>
