--- a/donations/index.html
+++ b/donations/index.html
@@ -15,9 +15,13 @@ title: 후원 내역
 </header>
 
 <div class="container" style="padding: 24px;">
+  <!--
+  <h1>후원 내역 <small class="d-none d-md-inline" style="color: gray;">Donations</small></h1>
+  <hr>
+  -->
   <div class="table-responsible">
     <table class="table">
-      <thead>
+      <thead class="thead-dark">
         <tr>
           <th scope="col">#</th>
           <th scope="col">제목</th>
