--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Main
   <div class="container">
     <h1>설립 목적 <small class="d-none d-md-inline" style="color: gray;">Purpose of Estabilishment</small></h1>
     <hr>
-    <p class="lead">사회복지사업법에 의한 노인요양시설로써 장기적인 요양이 필요한 어르신들에게 체계적이고 전문적인 장기 요양서비스를 제공하고 쾌적한 환경에서 기독교의 사랑을 전하며 보다 편안하고 안정적으로 '어르신들의 삶의 질'을 향상시키고자 함</p>
+    <p class="lead">사회복지사업법에 의한 노인요양시설로써 장기적인 요양이 필요한 어르신들에게 체계적이고 전문적인 장기 요양서비스를 제공하고 쾌적한 환경에서 기독교의 사랑을 전하며 보다 편안하고 안정적으로 '어르신들의 삶의 질'을 향상시키는 것입니다.</p>
   </div>
 </section>
 
