--- a/status.html
+++ b/status.html
@@ -3,6 +3,12 @@ layout: default
 title: 시설 현황
 ---
 
+<style>
+  th, td {
+    white-space: nowrap;
+  }
+</style>
+
 <header class="py-5 bg-image-full text-center" style="background-image: url('img/index-1.webp');">
   <div class="wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
@@ -11,14 +17,14 @@ title: 시설 현황
   </div>
 </header>
 
-<div class="container" style="padding: 24px;">
+<div class="container px-0 py-3">
   <!--
   <h1>연혁 <small class="d-none d-md-inline" style="color: gray;">History</small></h1>
   <hr>
   -->
-  <p class="lead text-right">2019년 3월 기준</p>
-  <h3>1. 일반 현황</h3>
-  <div class="table-responsive-xl">
+  <p class="lead text-right px-3">2019년 3월 기준</p>
+  <h3 class="px-3">1. 일반 현황</h3>
+  <div class="table-responsive">
     <table class="table">
       <tbody>
         <tr>
@@ -66,7 +72,7 @@ title: 시설 현황
     </table>
   </div>
   <hr>
-  <h3 class="mt-5">2-1. 시설현황(실로원)</h3>
+  <h3 class="mt-5 px-3">2-1. 시설현황(실로원)</h3>
   <div class="table-responsive">
     <table class="table">
       <tbody>
@@ -104,7 +110,7 @@ title: 시설 현황
     </table>
   </div>
   <hr>
-  <h3>2-2. 시설현황(주야간보호센터)</h3>
+  <h3 class="px-3">2-2. 시설현황(주야간보호센터)</h3>
   <div class="table-responsive">
     <table class="table">
       <tbody>
@@ -130,7 +136,7 @@ title: 시설 현황
     </table>
   </div>
   <hr>
-  <h3 class="mt-5">3. 인력현황</h3>
+  <h3 class="mt-5 px-3">3. 인력현황</h3>
   <div class="table-responsive">
     <table class="table">
       <thead class="thead-dark">
@@ -160,7 +166,7 @@ title: 시설 현황
         <tr>
           <td>협력병원</td>
           <td>2개소 / 1개소</td>
-          <td>재단법인원불교 원광종합병원, 효사랑 요양병원</td>
+          <td>재단법인원불교 원광종합병원, <br class="d-sm-inline d-md-none">효사랑 요양병원</td>
         </tr>
         <tr>
           <td>사회복지사</td>
@@ -196,7 +202,7 @@ title: 시설 현황
     </table>
   </div>
   <hr>
-  <h3 class="mt-5">4. 입소현황(소망의동산 실로원 및 부설 재가노인복지센터)</h3>
+  <h3 class="mt-5 px-3">4. 입소현황(소망의동산 실로원 및 부설 재가노인복지센터)</h3>
   <div class="table-responsive">
     <table class="table">
       <thead class="thead-dark">
