--- a/history.html
+++ b/history.html
@@ -3,6 +3,12 @@ layout: default
 title: 연혁
 ---
 
+<style>
+  th {
+    white-space: nowrap;
+  }
+</style>
+
 <header class="py-5 bg-image-full text-center" style="background-image: url('img/index-1.webp');">
   <div class="wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
@@ -11,7 +17,7 @@ title: 연혁
   </div>
 </header>
 
-<div class="container" style="padding: 24px;">
+<div class="container px-0 py-3">
   <!--
   <h1>연혁 <small class="d-none d-md-inline" style="color: gray;">History</small></h1>
   <hr>
