--- a/donations/index.html
+++ b/donations/index.html
@@ -6,7 +6,7 @@ title: 후원 내역
 
 </style>
 
-<header class="py-5 bg-image-full text-center" style="background-image: url('/img/index-1.webp');">
+<header class="py-5 bg-image-full text-center" style="background-image: url('/img/index-1.png');">
   <div class="wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
     <hr style="width: 50%; border-color: #cccccc;">
