--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: Main
 </header>
 -->
 
-<section class="py-5 bg-image-full text-center" style="background-image: url(img/index-1.webp);">
+<section class="py-5 bg-image-full text-center" style="background-image: url(img/index-1.png);">
   <div class=" wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
     <hr style="width: 50%; border-color: #cccccc;">
@@ -27,7 +27,7 @@ title: Main
 </section>
 
 <!-- Image Section - set the background image for the header in the line below -->
-<section class="py-5 bg-image-full" style="background-image: url(img/index-2.webp);">
+<section class="py-5 bg-image-full" style="background-image: url(img/index-2.png);">
   <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
   <div style="height: 200px;"></div>
 </section>
