--- a/status.html
+++ b/status.html
@@ -9,7 +9,7 @@ title: 시설 현황
   }
 </style>
 
-<header class="py-5 bg-image-full text-center" style="background-image: url('img/index-1.webp');">
+<header class="py-5 bg-image-full text-center" style="background-image: url('img/index-1.png');">
   <div class="wfh-header-bg">
     <h1 class="display-4"><small style="color: #cccccc;">사회복지법인</small><br><b>희망복지재단</b></h1>
     <hr style="width: 50%; border-color: #cccccc;">
@@ -18,10 +18,6 @@ title: 시설 현황
 </header>
 
 <div class="container px-0 py-3">
-  <!--
-  <h1>연혁 <small class="d-none d-md-inline" style="color: gray;">History</small></h1>
-  <hr>
-  -->
   <p class="lead text-right px-3">2019년 3월 기준</p>
   <h3 class="px-3">1. 일반 현황</h3>
   <div class="table-responsive">
